<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:orientation="vertical"
        android:background="@drawable/shape_white_round_bg"
        android:elevation="4dp"
        android:layout_margin="4dp">
        <TextView
            android:id="@+id/tv_menu1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_right1"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/tv_menu2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_right2"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/tv_menu3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_right3"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>
        <TextView
            android:id="@+id/tv_menu4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_right4"
            android:textSize="13sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>

</LinearLayout>