<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="8dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_right2"
            android:textSize="17sp"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_name"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:hint="@string/input_goods_name"
                android:textColorHint="@color/text_grey_color"
                android:paddingLeft="12dp"
                android:background="@drawable/shape_input_grey_bg"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_price"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:hint="@string/input_goods_price"
                android:textColorHint="@color/text_grey_color"
                android:paddingLeft="12dp"
                android:background="@drawable/shape_input_grey_bg"
                android:maxLines="1"
                android:inputType="numberDecimal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_category"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/ll_category"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape_input_grey_bg">
                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    android:hint="@string/input_goods_category"
                    android:textColorHint="@color/text_grey_color"
                    android:paddingLeft="12dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:gravity="center_vertical"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_down"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_info"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/et_remark"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:hint="@string/input_goods_info"
                android:textColorHint="@color/text_grey_color"
                android:paddingLeft="12dp"
                android:background="@drawable/shape_input_grey_bg"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_photo"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:id="@+id/rl_sel_pic"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/shape_input_grey_bg">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_photo"
                    android:layout_centerInParent="true"/>
                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_login_button_bg"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
