<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="8dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_pkg"
            android:textSize="17sp"
            android:textColor="@color/text_color"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pkg_name"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:hint="@string/input_pkg_name"
                android:textColorHint="@color/text_grey_color"
                android:paddingLeft="12dp"
                android:background="@drawable/shape_input_grey_bg"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_num"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/et_num"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="12sp"
                android:textColor="@color/text_color"
                android:hint="@string/input_select_num"
                android:textColorHint="@color/text_grey_color"
                android:paddingLeft="12dp"
                android:background="@drawable/shape_input_grey_bg"
                android:maxLines="1"
                android:inputType="number"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="12sp"
                android:textColor="@color/text_sub_color"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shape_input_grey_bg">
                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:textColor="@color/text_color"
                    android:hint="@string/input_content"
                    android:textColorHint="@color/text_grey_color"
                    android:paddingLeft="12dp"
                    android:background="@null"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_toLeftOf="@+id/iv_add"/>
                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_add_pkg"
                    android:layout_alignParentRight="true"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </RelativeLayout>


            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flowlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"/>

            <Button
                android:id="@+id/btn_complete"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/shape_login_button_bg"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
